[package]
name = "ahrs"
version = "0.2.2"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
description = "A Rust port of Madgwick's AHRS algorithm"
repository = "https://github.com/jmagnuson/ahrs-rs"
documentation = "https://docs.rs/ahrs"
readme = "README.md"
keywords = ["ahrs", "madgwick", "imu", "kalman", "accelerometer"]
license = "GPL-3.0"
edition = "2018"

[features]
default = [ "std" ]
std = ["nalgebra/default", "simba/default", "num-traits/default"]
field_access = []

[lib]
name = "ahrs"
path = "src/lib.rs"

[[bench]]
name = "ahrs"
harness = false

[dependencies.nalgebra]
version = "0.21"
default-features = false

[dependencies.simba]
version = "0.1"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.rand]
version = "0.7"

[dev-dependencies.approx]
version = "0.3"

[dev-dependencies.criterion]
version = "0.3"
