[package]
name = "ahrs"
version = "0.6.0"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
description = "A Rust port of Madgwick's AHRS algorithm"
repository = "https://github.com/jmagnuson/ahrs-rs"
documentation = "https://docs.rs/ahrs"
readme = "README.md"
keywords = ["ahrs", "madgwick", "imu", "kalman", "accelerometer"]
license = "MIT"
edition = "2018"

[features]
default = [ "std" ]
std = ["nalgebra/default", "simba/default", "num-traits/default"]
field_access = []

[lib]
name = "ahrs"
path = "src/lib.rs"

[[bench]]
name = "ahrs"
harness = false

[dependencies.nalgebra]
version = "0.32"
features = ["libm-force"]
default-features = false

[dependencies.simba]
version = "0.8"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.approx]
version = "0.5"

[dev-dependencies.criterion]
version = "0.4"
